plugins {
    id 'java'
}

group 'my.cloud'
version '1.0-SNAPSHOT'

sourceCompatibility = '15'
targetCompatibility = '15'

repositories {
    mavenCentral()
}

dependencies {
    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.reflections:reflections:0.9.12'
    implementation 'io.netty:netty-all:4.1.63.Final'
    implementation 'commons-io:commons-io:2.8.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}
